[CHANGED] normalize usage of NutsMessage and NutsUtils [FIXED] fixed compiling issues